--- a/html/company/personal.html
+++ b/html/company/personal.html
@@ -95,7 +95,7 @@
 					</div>
 				</div>
 
-				<p>Powered by Debian, &#169; Tech Friends 2021</p>
+				<p>&#169; Tech Friends 2021</p>
 			</footer>
 		</main>
 	</body>
