--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<body>
 		<main>
-			<header>
+			<header class="header">
 				<nav>
 					<div class="nav-mobile">
 						<div class="nav-logo">
@@ -134,7 +134,7 @@
 					</div>
 				</div>
 
-				<p>Powered by Debian, &#169; Tech Friends 2021</p>
+				<p>&#169; Tech Friends 2021</p>
 			</footer>
 		</main>
 	</body>
