--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<body>
 		<main>
-			<header class="header">
+			<header>
 				<nav>
 					<div class="nav-mobile">
 						<div class="nav-logo">
