--- a/index.html
+++ b/index.html
@@ -7,39 +7,21 @@
 		<link rel="stylesheet" href="/fonts/fontawesome-free-5.15.3-web/css/all.css">
 		<script type="text/javascript" src="/scripts/scroll-position.js"></script>
 		<script type="text/javascript" src="/scripts/navmenu-toggle.js"></script>
+		<script type="text/javascript" src="/scripts/jquery.js"></script>
+		<script>
+			$(function(){ $("#included-header").load("/html/company/templates/header.html"); });
+			$(function(){ $("#included-footer").load("/html/company/templates/footer.html"); });
+		</script>
 	</head>
 
 	<body>
 		<main>
-			<header>
-				<nav>
-					<div class="nav-mobile">
-						<div class="nav-logo">
-							<a href="/index.html"><img src="/images/TechFriends-HouseLogo.png"></a>
-						</div>
-
-						<button class="nav-menu">
-							<i class="fas fa-bars" onclick="toggleMenu()"></i>
-						</button>
-					</div>
-
-					<div class="nav-links" id="navLinks">
-						<ul>
-							<li><a href="/index.html">Home</a></li>
-							<li><a href="/html/company/courses.html">Group Courses</a></li>
-							<li><a href="/html/company/personal.html">Personal Help</a></li>
-							<li><a href="/html/blog/first.html">Blog</a></li>
-							<li><a href="/html/company/contact.html">Contact</a></li>
-						</ul>
-					</div>
-				</nav>
-			</header>
+			<header id="included-header"></header>
 
 			<section class="intro">
 				<div class="tagline">
 					<h1>Your Help With Everything Technology</h1>
 					<p>Is your phone giving you trouble? You're at the right place!</p>
-					<!--Add rotating phone/computer/tablet/TV/etc.-->
 					<button class="rect-btn">
 						<a href="#services">Learn More</a>
 					</button>
@@ -87,7 +69,7 @@
 					</button>
 				</div>
 				<div class="operation-right">
-					<img src="/images/jfreeland.png">
+					<img src="/images/company/jfreeland.png">
 				</div>
 			</section>
 
@@ -97,14 +79,14 @@
 
 				<div class="testimonial-row">
 					<div class="testimonial-cell">
-						<img src="/images/testimonial-lillian.jpg">
+						<img src="/images/company/testimonial-lillian.jpg">
 						<h2>Lillian Moris</h2>
 						<p>"He gave me step by step instructions on how to use my phone and helped me lower the 
 							cost of my monthly phone bill by half. I couldn't be happier with their service"
 						</p>
 					</div>
 					<div class="testimonial-cell">
-						<img src="/images/testimonial-alan.jpg">
+						<img src="/images/company/testimonial-alan.jpg">
 						<h2>Alan Freeland</h2>
 						<p>"Tech Friends has officially become my go-to tech place the next time I need help. 
 							They are super friendly and they are very thorough in helping me"
@@ -113,29 +95,7 @@
 				</div>
 			</section>
 
-			<footer>
-				<div class="footer-row">
-					<div class="footer-column">
-						<h3>Tech Friends</h3>
-						<ul>
-							<li><a href="/index.html">Home</a></li>
-							<li><a href="/html/company/courses.html">Group Courses</a></li>
-							<li><a href="/html/company/personal.html">Personal Help</a></li>
-							<li><a href="/html/company/contact.html">Contact Us</a></li>
-						</ul>
-					</div>
-					<div class="footer-column">
-						<h3>Company</h3>
-						<ul>
-							<li><a href="/html/blog/home.html">Blog</a></li>
-							<li><a href="/html/company/partnerships.html">Work With Us</a></li>
-							<li><a href="/html/company/commitment.html">Open Source</a></li>
-						</ul>
-					</div>
-				</div>
-
-				<p>&#169; Tech Friends 2021</p>
-			</footer>
+			<footer id="included-footer"></footer>
 		</main>
 	</body>
 </html>
