--- a/html/company/remote.html
+++ b/html/company/remote.html
@@ -4,11 +4,12 @@
 		<title>Tech Friends - Remote Assistance</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="/styles/basic.css">
+		<link rel="stylesheet" href="/fonts/fontawesome-free-5.15.3-web/css/all.min.css">
 		<script type="text/javascript" src="/scripts/navmenu-toggle.js"></script>
 		<script type="text/javascript" src="/scripts/jquery-3.6.0.min.js"></script>
 		<script>
-			$(function(){ $("#included-header").load("/html/blog/templates/header.html"); });
-			$(function(){ $("#included-footer").load("/html/blog/templates/footer.html"); });
+			$(function(){ $("#included-header").load("/html/company/templates/header.html"); });
+			$(function(){ $("#included-footer").load("/html/company/templates/footer.html"); });
 		</script>
 	</head>
 
