Relocated blog to streamline development

--- a/html/courses.html
+++ b/html/courses.html
@@ -8,8 +8,8 @@
 		<script type="text/javascript" src="/scripts/navmenu-toggle.js"></script>
 		<script type="text/javascript" src="/scripts/jquery-3.6.0.min.js"></script>
 		<script>
-			$(function(){ $("#included-header").load("/html/company/templates/header.html"); });
-			$(function(){ $("#included-footer").load("/html/company/templates/footer.html"); });
+			$(function(){ $("#included-header").load("/html/templates/header.html"); });
+			$(function(){ $("#included-footer").load("/html/templates/footer.html"); });
 		</script>
 	</head>
 
@@ -23,7 +23,7 @@
 
 				<div class="friend" id="friend">
 					<h2>Making Your Phone Your Friend</h2>
-					<h5>3 sessions, 1 hour per session, <a href="/html/company/signup.html">Sign up here</a></h5>
+					<h5>3 sessions, 1 hour per session, <a href="/html/signup.html">Sign up here</a></h5>
 					<hr class="rounded">
 					<p>
 						Serving as Tech Friend's most popular course, Making Your Phone Your Friend teaches you how to get comfortable
@@ -35,7 +35,7 @@
 
 				<div class="friend2" id="friend2">
 					<h2>Making Your Phone Your Friend Advanced</h2>
-					<h5>3 sessions, 1 hour per session, <a href="/html/company/signup.html">Sign up here</a></h5>
+					<h5>3 sessions, 1 hour per session, <a href="/html/signup.html">Sign up here</a></h5>
 					<hr class="rounded">
 					<p>
 						Making Your Phone Your Friend Advanced dives deeper into managing your photos and using social media.
@@ -46,7 +46,7 @@
 
 				<div class="camera" id="camera">
 					<h2>Conquering Your Camera</h2>
-					<h5>1 session, 1 hour, <a href="/html/company/signup.html">Sign up here</a></h5>
+					<h5>1 session, 1 hour, <a href="/html/signup.html">Sign up here</a></h5>
 					<hr class="rounded">
 					<p>
 						Conquering your Camera guides you through taking and managing photos on your phone. We will show you how
@@ -57,7 +57,7 @@
 
 				<div class="social" id="social">
 					<h2>Getting Social</h2>
-					<h5>1 session, 1 hour, <a href="/html/company/signup.html">Sign up here</a></h5>
+					<h5>1 session, 1 hour, <a href="/html/signup.html">Sign up here</a></h5>
 					<hr class="rounded">
 					<p>
 						Getting Social introduces you to the benefits and dangers of social media. You will learn how to set up a Facebook
