--- a/html/personal.html
+++ b/html/personal.html
@@ -8,8 +8,8 @@
 		<script type="text/javascript" src="/scripts/navmenu-toggle.js"></script>
 		<script type="text/javascript" src="/scripts/jquery-3.6.0.min.js"></script>
 		<script>
-			$(function(){ $("#included-header").load("/html/company/templates/header.html"); });
-			$(function(){ $("#included-footer").load("/html/company/templates/footer.html"); });
+			$(function(){ $("#included-header").load("/html/templates/header.html"); });
+			$(function(){ $("#included-footer").load("/html/templates/footer.html"); });
 		</script>
 	</head>
 
@@ -26,7 +26,7 @@
 					<p>
 						Tech Friends is happy to help with all of your technology problems. Whether it's a small issue with your phone or a computer virus, we will take care of it.
 						There is no such thing as a stupid question; we will answer them all. If you're struggling with your technology, give us a call at <a href="tel:9522283659">(952) 228-3659</a>
-						or visit our <a href="/html/company/contact.html">contact page</a>.
+						or visit our <a href="/html/contact.html">contact page</a>.
 					</p>
 				</div>
 
@@ -51,8 +51,8 @@
 					<h4>What is your price?</h4>
 					<p>
 						We charge a flat rate of $40 per hour for our assistance sessions.
-						All profits go towards <a href="/html/company/jfreeland.html">my</a> college tuition.
-						I am currently a student at the University of Minnesota and you're supporting me by working with us!
+						All profits go towards my college tuition. I am currently a student
+						at the University of Minnesota and you're supporting me by working with us!
 					</p>
 				</div>
 			</section>
