--- a/html/remote.html
+++ b/html/remote.html
@@ -8,8 +8,8 @@
 		<script type="text/javascript" src="/scripts/navmenu-toggle.js"></script>
 		<script type="text/javascript" src="/scripts/jquery-3.6.0.min.js"></script>
 		<script>
-			$(function(){ $("#included-header").load("/html/company/templates/header.html"); });
-			$(function(){ $("#included-footer").load("/html/company/templates/footer.html"); });
+			$(function(){ $("#included-header").load("/html/templates/header.html"); });
+			$(function(){ $("#included-footer").load("/html/templates/footer.html"); });
 		</script>
 	</head>
 
