--- a/html/signup.html
+++ b/html/signup.html
@@ -8,8 +8,8 @@
 		<script type="text/javascript" src="/scripts/navmenu-toggle.js"></script>
 		<script type="text/javascript" src="/scripts/jquery-3.6.0.min.js"></script>
 		<script>
-			$(function(){ $("#included-header").load("/html/company/templates/header.html"); });
-			$(function(){ $("#included-footer").load("/html/company/templates/footer.html"); });
+			$(function(){ $("#included-header").load("/html/templates/header.html"); });
+			$(function(){ $("#included-footer").load("/html/templates/footer.html"); });
 		</script>
 	</head>
 
@@ -39,9 +39,9 @@
 
 				<div class="signup-help">
 					<h2>Need help?</h2>
-					<h5><a href="/html/company/contact.html">Contact Tech Friends</a> for assistance</h5>
+					<h5><a href="/html/contact.html">Contact Tech Friends</a> for assistance</h5>
 					<p>
-						If there are no locations near you, we offer <a href="/html/company/personal.html">Personal Help</a>.<br>
+						If there are no locations near you, we offer <a href="/html/personal.html">Personal Help</a>.<br>
 						Alternatively, feel free to ask your facility about hosting our courses.<br>
 					</p>
 				</div>
