--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<script type="text/javascript" src="/scripts/navmenu-toggle.js"></script>
 		<script type="text/javascript" src="/scripts/jquery-3.6.0.min.js"></script>
 		<script>
-			$(function(){ $("#included-header").load("/html/company/templates/header.html"); });
-			$(function(){ $("#included-footer").load("/html/company/templates/footer.html"); });
+			$(function(){ $("#included-header").load("/html/templates/header.html"); });
+			$(function(){ $("#included-footer").load("/html/templates/footer.html"); });
 		</script>
 	</head>
 
@@ -34,21 +34,21 @@
 
 				<div class="services-row">
 					<div class="services-cell">
-						<a href="/html/company/courses.html">
+						<a href="/html/courses.html">
 							<i class="fas fa-user-graduate"></i>
 							<h2>Group Courses</h2>
 						</a>
 						<p>Community centric classes that walk you through the basics of using your smartphone.</p>
 					</div>
 					<div class="services-cell">
-						<a href="/html/company/personal.html">
+						<a href="/html/personal.html">
 							<i class="fas fa-user-friends"></i>
 							<h2>Personal Help</h2>
 						</a>
 						<p>Individual attention that caters to specific technology-based problems.</p>
 					</div>
 					<div class="services-cell">
-						<a href="/html/company/remote.html">
+						<a href="/html/remote.html">
 							<i class="fas fa-mobile-alt"></i>
 							<h2>Remote Assistance</h2>
 						</a>
@@ -65,11 +65,11 @@
 						Give me a call if you would like to support my effort. I hope to hear from you in the future, thank you!
 					</p>
 					<button class="rect-btn">
-						<a href="/html/company/contact.html">Contact Jake</a>
+						<a href="/html/contact.html">Contact Jake</a>
 					</button>
 				</div>
 				<div class="operation-right">
-					<img src="/images/company/jfreeland.png">
+					<img src="/images/jfreeland.png">
 				</div>
 			</section>
 
@@ -79,14 +79,14 @@
 
 				<div class="testimonial-row">
 					<div class="testimonial-cell">
-						<img src="/images/company/testimonial-lillian.jpg">
+						<img src="/images/testimonial-lillian.jpg">
 						<h2>Lillian Moris</h2>
 						<p>"He gave me step by step instructions on how to use my phone and helped me lower the 
 							cost of my monthly phone bill by half. I couldn't be happier with their service"
 						</p>
 					</div>
 					<div class="testimonial-cell">
-						<img src="/images/company/testimonial-alan.jpg">
+						<img src="/images/testimonial-alan.jpg">
 						<h2>Alan Freeland</h2>
 						<p>"Tech Friends has officially become my go-to tech place the next time I need help. 
 							They are super friendly and they are very thorough in helping me"
