fixed some html formatting

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	</head>
 
 	<body>
-		<main>
-			<header id="included-header"></header>
+		<header id="included-header"></header>
 
+		<main>
 			<section class="intro">
 				<div class="tagline">
 					<h1>Your Help With Everything Technology</h1>
@@ -61,7 +61,7 @@
 				<div class="operation-left">
 					<h1>Help Fund My College Tuition</h1>
 					<p>Hello there! My name is Jake Freeland and I started Tech Friends during my sophomore year of highschool.
-						I attend the University of Minnesota for Data Science and my company profits go towards my college tuition.
+						I attend the University of Minnesota for Computer Science and my company profits go towards my college tuition.
 						Give me a call if you would like to support my effort. I hope to hear from you in the future, thank you!
 					</p>
 					<button class="rect-btn">
@@ -89,13 +89,13 @@
 						<img src="/images/testimonial-alan.jpg">
 						<h2>Alan Freeland</h2>
 						<p>"Tech Friends has officially become my go-to tech place the next time I need help. 
-							They are super friendly and they are very thorough in helping me"
+							They are super friendly and they are very thorough when helping me"
 						</p>
 					</div>
 				</div>
 			</section>
-
-			<footer id="included-footer"></footer>
 		</main>
+
+		<footer id="included-footer"></footer>
 	</body>
 </html>
