--- a/html/contact.html
+++ b/html/contact.html
@@ -14,27 +14,25 @@
 	</head>
 
 	<body>
+		<header id="included-header"></header>
+
 		<main>
-			<header id="included-header"></header>
+			<h1>Contact Information</h1>
+			<h3>Contact us with questions or to schedule an appointment</h3>
 
-			<section class="content" id="content">
-				<h1>Contact Information</h1>
-				<h3>Contact us with questions or to schedule an appointment</h3>
+			<h2>Tech Friends:</h2>
+			<h4>Response times are often fastest by phone</h4>
+			<ul>
+				<li>Phone: <a href="tel:9522283659">(952) 228-3659</a></li>
+				<li>Email: <a href="mailto:jake@technologyfriends.net">jake@technologyfriends.net</a></li>
+			</ul>
 
-				<h2>Tech Friends:</h2>
-				<h4>Response times are often fastest by phone</h4>
-				<ul>
-					<li>Phone: <a href="tel:9522283659">(952) 228-3659</a></li>
-					<li>Email: <a href="mailto:jake@technologyfriends.net">jake@technologyfriends.net</a></li>
-				</ul>
+			<h2>Partnered Facilities:</h2>
+			<p>Get in contact with our partners on our <a href="/html/signup.html">sign up</a> page.</p>
 
-				<h2>Partnered Facilities:</h2>
-				<p>Get in contact with our partners on our <a href="/html/signup.html">sign up</a> page.</p>
-
-				<!--Consider contact box-->
-			</section>
-
-			<footer id="included-footer"></footer>
+			<!-- consider contact box -->
 		</main>
+
+		<footer id="included-footer"></footer>
 	</body>
 </html>
